Update README and workflows to support Workload Identity Federation for GKE Autopilot deployments, including authentication changes and new setup options.

--- a/.github/workflows/gke-autopilot.yaml
+++ b/.github/workflows/gke-autopilot.yaml
@@ -1,6 +1,6 @@
 # Deploy GKE Autopilot cluster via Terraform.
 # Trigger manually with inputs for project, region, cluster name, etc.
-# Requires: GOOGLE_CREDENTIALS secret (GCP service account JSON key).
+# Auth: Use WIF (vars WIF_PROVIDER, WIF_SA) or GOOGLE_CREDENTIALS secret. See docs/WIF_SETUP.md.
 
 name: Deploy GKE Autopilot
 
@@ -61,6 +61,9 @@ jobs:
   deploy:
     name: Terraform
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write   # required for Workload Identity Federation
+      contents: read
     defaults:
       run:
         working-directory: ${{ env.TF_WORKING_DIR }}
@@ -69,7 +72,15 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Authenticate to GCP
+      - name: Authenticate to GCP (Workload Identity)
+        if: vars.WIF_PROVIDER != '' && vars.WIF_SA != ''
+        uses: google-github-actions/auth@v2
+        with:
+          workload_identity_provider: ${{ vars.WIF_PROVIDER }}
+          service_account: ${{ vars.WIF_SA }}
+
+      - name: Authenticate to GCP (Service Account Key)
+        if: vars.WIF_PROVIDER == '' || vars.WIF_SA == ''
         uses: google-github-actions/auth@v2
         with:
           credentials_json: ${{ secrets.GOOGLE_CREDENTIALS }}
