--- a/.github/workflows/gke-autopilot-destroy.yaml
+++ b/.github/workflows/gke-autopilot-destroy.yaml
@@ -1,6 +1,6 @@
 # Destroy GKE Autopilot cluster via Terraform.
 # Use the same project_id, region, cluster_name (and optional vars) as when the cluster was created.
-# Requires: GOOGLE_CREDENTIALS secret.
+# Auth: Use WIF (vars WIF_PROVIDER, WIF_SA) or GOOGLE_CREDENTIALS secret. See docs/WIF_SETUP.md.
 # For destroy to work in CI, Terraform must use a remote backend (e.g. GCS) so state is available.
 
 name: Destroy GKE Autopilot
@@ -62,6 +62,9 @@ jobs:
   destroy:
     name: Terraform Destroy
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write   # required for Workload Identity Federation
+      contents: read
     defaults:
       run:
         working-directory: ${{ env.TF_WORKING_DIR }}
@@ -76,7 +79,15 @@ jobs:
           echo "::error::Set 'confirm_destroy' to true to run destroy."
           exit 1
 
-      - name: Authenticate to GCP
+      - name: Authenticate to GCP (Workload Identity)
+        if: vars.WIF_PROVIDER != '' && vars.WIF_SA != ''
+        uses: google-github-actions/auth@v2
+        with:
+          workload_identity_provider: ${{ vars.WIF_PROVIDER }}
+          service_account: ${{ vars.WIF_SA }}
+
+      - name: Authenticate to GCP (Service Account Key)
+        if: vars.WIF_PROVIDER == '' || vars.WIF_SA == ''
         uses: google-github-actions/auth@v2
         with:
           credentials_json: ${{ secrets.GOOGLE_CREDENTIALS }}
