Update GKE Autopilot workflows to set GOOGLE_CLOUD_PROJECT and CLOUDSDK_CORE_PROJECT environment variables for Terraform commands, ensuring correct project context. Enhance documentation with troubleshooting tips for backend configuration issues related to project ID usage.

--- a/.github/workflows/gke-autopilot-destroy.yaml
+++ b/.github/workflows/gke-autopilot-destroy.yaml
@@ -99,12 +99,18 @@ jobs:
           terraform_wrapper: false
 
       - name: Terraform Init
+        env:
+          GOOGLE_CLOUD_PROJECT: ${{ inputs.project_id }}
+          CLOUDSDK_CORE_PROJECT: ${{ inputs.project_id }}
         run: |
           terraform init -input=false \
             -backend-config="bucket=${{ vars.TF_STATE_BUCKET || 'terraform-state-0222206' }}" \
             -backend-config="prefix=gke-autopilot/${{ inputs.project_id }}/${{ inputs.cluster_name }}"
 
       - name: Terraform Destroy
+        env:
+          GOOGLE_CLOUD_PROJECT: ${{ inputs.project_id }}
+          CLOUDSDK_CORE_PROJECT: ${{ inputs.project_id }}
         run: |
           terraform destroy -no-color -input=false -auto-approve \
             -var="project_id=${{ inputs.project_id }}" \
